--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-/bin/
-=======
 # Compiled class file
 *.class
 
@@ -24,5 +21,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-replay_pid*
->>>>>>> 0ca5ab3d8c41aea72ccd594eb6b2deead26fcc9a
+
+# Eclipse
+.settings/
